--- a/style.css
+++ b/style.css
@@ -1,16 +1,54 @@
+#body{
+    justify-items: center;
+    align-items: center;
+    background-image: url('images/crumpled_paper_tan.jpg')
+}
+
 .grid {
     display: grid;
-    /*grid-template-columns: 200px 1fr 200px;*/
-    grid-template-columns: 300px 1fr 200px;
-    grid-template-rows: auto 1fr auto;
-    gap: 5px;
+    grid-template-columns: 300px auto 300px;
+    grid-template-rows: auto auto auto auto;
+    gap: 10px;
     height: 90vh;
+    width: 100%;
+    padding: 10px;
+    /*align-items: center;*/
+    justify-content: center;
+    /*background-image: url('/images/crumpled_paper_tan.jpg')*/
 }
+
 header, footer {
     grid-column: 1 / 4;
+    font-family: 'Indie Flower', cursive;
+    font-size: 3em;
+    align-content: center;
 }
+
+aside, article {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.5em;
+}
+
+article {
+    /*padding: 50px;*/
+}
+
 header, aside, article, footer {
-    border-style: solid;
-    background: silver;
-    font-size: 2em;
+    padding: 20px;
+}
+
+.bioPic {
+    display: block;
+    margin-top: 3;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
+.icon {
+    image-size
+}
+
+.contact{
+    font-size: 15px;
 }
