--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
-body{
+#body{
     justify-items: center;
     align-items: center;
-    background-image: url('images/crumpled_paper_tan.jpg')
+}
+
+a:link, a:visited {
+    color: black;
+    font-family: 'Raleway', sans-serif;
+  }
+
+a:hover {
+    color: hotpink;
+    font-family: 'Indie Flower', cursive;
 }
 
 .grid {
@@ -14,7 +23,7 @@ body{
     padding: 10px;
     /*align-items: center;*/
     justify-content: center;
-    /*background-image: url('/images/crumpled_paper_tan.jpg')*/
+    /*background-image: url('images/crumpled_paper_tan.jpg')*/
 }
 
 header, footer {
@@ -45,10 +54,44 @@ header, aside, article, footer {
     width: 75%;
 }
 
+.portfolioItems {
+    /*display: block;*/
+    padding: 50px;
+    word-break: break-all;
+}
+
+.portfolioPic {
+    /*float: left;*/
+    width: 20%;
+    -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+    margin: 0 0 4rem 0;
+}
+
+.portfolioText {
+    display: inline-block;
+    padding: 20px;
+    /*word-wrap: normal;
+    word-break: break-all;
+    white-space: normal;
+    white-space: pre-line;*/
+    text-align:justify;
+    font-color: black;
+}
+
 .icon {
     image-size
 }
 
 .contact{
     font-size: 15px;
+}
+
+h1 {
+    font-size: 15px;
+}
+
+h2 {
+    font-size: 25px;
 }
