--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     align-items: center;
 }
 
-a:link, a:visited {
-    color: black;
+a:link {
+    color: gray;
+    text-decoration: none;
     font-family: 'Raleway', sans-serif;
   }
 
@@ -54,34 +55,49 @@ header, aside, article, footer {
     width: 75%;
 }
 
+.portfolioContainer {
+    display: block;
+    padding: 10px;
+}
+
+
 .portfolioItems {
-    /*display: block;*/
-    padding: 50px;
-    word-break: break-all;
+    padding: 100px;
 }
 
 .portfolioPic {
-    /*float: left;*/
+    float: left;
     width: 20%;
+    padding: 20px;
+
     -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
     margin: 0 0 4rem 0;
+
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+
+    filter: grayscale(75%)
+
+}
+
+.portfolioPic:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+.portfolioPics {
+
 }
 
 .portfolioText {
-    display: inline-block;
-    padding: 20px;
-    /*word-wrap: normal;
-    word-break: break-all;
-    white-space: normal;
-    white-space: pre-line;*/
-    text-align:justify;
-    font-color: black;
-}
-
-.icon {
-    image-size
+    /*display: block;*/
+    text-align:left;
+    color: black;
+    width: 80%;
+    margin-left: 25%;
+    padding: 10px 0;
 }
 
 .contact{
